<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/admin_title"
        android:layout_marginTop="100dp"
        android:layout_gravity="center"
        android:textSize="30sp">
    </TextView>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:inputType="text"
        android:textSize="25sp"
        android:hint="@string/enter_username"
        android:id="@+id/admin_user">
    </EditText>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:textSize="25sp"
        android:hint="@string/enter_password"
        android:id="@+id/admin_pass">
    </EditText>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:id="@+id/sign_in_admin"
        android:layout_marginTop="35dp"
        android:textSize="20sp"
        android:padding="20dp"
        android:layout_gravity="center">
    </Button>

</LinearLayout>